--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   <body>
     <header>
       <div class="main-nav">
-        <a href="vikhyaat.html" class="logo">Vikhyaat</a>
+        <a href="index.html" class="logo">Vikhyaat</a>
         <ul>
-          <li><a href="vikhyaat.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="service.html">Photos</a></li>
           <li><a href="work.html">Destinations</a></li>
           <li><a href="contact.html">Contact</a></li>
