--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </div>
          
           <div class="secondHalf">
-              <img src="D:\Pictures\PicsArt_11-21-02.13.55.jpg" alt="laptop image">
+              <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fmedium.com%2Fthe-writing-pool%2Fthe-nalanda-university-destruction-ccb334c52e94&psig=AOvVaw3C7OmHy9Rn9YcuhM8Jzw1q&ust=1717304389789000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCKCPicLPuYYDFQAAAAAdAAAAABAE">
           </div>
           
       </div>
