--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </div>
          
           <div class="secondHalf">
-              <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fmedium.com%2Fthe-writing-pool%2Fthe-nalanda-university-destruction-ccb334c52e94&psig=AOvVaw3C7OmHy9Rn9YcuhM8Jzw1q&ust=1717304389789000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCKCPicLPuYYDFQAAAAAdAAAAABAE" class="imgFluid">
+              <img src="https://www.google.com/imgres?q=image%20of%20nalanda%20university&imgurl=https%3A%2F%2Fwww.hindustantimes.com%2Fht-img%2Fimg%2F2024%2F06%2F20%2F550x309%2FANI-20240619079-0_1718802596131_1718859501832.jpg&imgrefurl=https%3A%2F%2Fwww.hindustantimes.com%2Feducation%2Ffeatures%2Fnalanda-university-a-quest-to-make-india-knowledge-centre-101718859270107.html&docid=rGEuC90LmdjHuM&tbnid=9UHgMqLrEgCkmM&vet=12ahUKEwj8gIfRqI-HAxUDoK8BHbRoDHkQM3oECBwQAA..i&w=549&h=309&hcb=2&itg=1&ved=2ahUKEwj8gIfRqI-HAxUDoK8BHbRoDHkQM3oECBwQAA" class="imgFluid">
           </div>
           
       </div>
