--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </div>
          
           <div class="secondHalf">
-              <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fin.pinterest.com%2Fpin%2Fnalanda-university-ruins-bihar-buy-photo-print--438467713696890365%2F&psig=AOvVaw2Q64g4TPH1tL7YknQ--qCG&ust=1720249720265000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCNii3N-rj4cDFQAAAAAdAAAAABAE" class="imgFluid">
+              <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fin.pinterest.com%2Fpin%2Fnalanda-university-ruins-bihar-buy-photo-print--438467713696890365%2F&psig=AOvVaw2Q64g4TPH1tL7YknQ--qCG&ust=1720249720265000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCNii3N-rj4cDFQAAAAAdAAAAABAE">
           </div>
           
       </div>
