--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </div>
          
           <div class="secondHalf">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d6/Hunter_gatherer%27s_camp_at_Irish_National_Heritage_Park_-_geograph.org.uk_-_1252699.jpg/495px-Hunter_gatherer%27s_camp_at_Irish_National_Heritage_Park_-_geograph.org.uk_-_1252699.jpg" class="imgFluid">
+                <img src="https://www.trawell.in/admin/images/upload/125543940Rajgir_Main1.jpg" class="imgFluid">
 </div>
           </div>
           
