--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </div>
          
           <div class="secondHalf">
-                <img src="https://www.trawell.in/admin/images/upload/125543940Rajgir_Main1.jpg" class="imgFluid">
+                <img src="./125543940Rajgir_Main1.jpg" class="imgFluid">
 </div>
           </div>
           
