--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </div>
          
           <div class="secondHalf">
-                <img src="./125543940Rajgir_Main1.jpg" class="imgFluid">
+                <img src="./360_F_314239359_4Qz8WQlwkKYLBjHHwGWaZJxPwPjL3DKx.jpg" class="imgFluid">
 </div>
           </div>
           
