--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
       </div>
     </header>
     
-   
+   <style>
+p {
+  background-image: url('125543940Rajgir_Main1.jpg');
+}
+</style>
     <section class="background firstSection">
       <div class="box-main">
           <div class="firstHalf">
