--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     
    <style>
 p {
-  background-image: url('125543940Rajgir_Main1.jpg');
+  background-color:sky blue;
 }
 </style>
     <section class="background firstSection">
