--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
     <link rel="stylesheet" href="delhistyle.css">
     <title>IT Company || Home Page</title>
   </head>
+  <style>
   <body>
+   background-image: url('125543940Rajgir_Main1.jpg');
+   background-repeat: no-repeat;
+   background-attachment: fixed;  
+   background-size: cover;
     <header>
       <div class="main-nav">
         <a href="index.html" class="logo">Vikhyaat</a>
@@ -44,11 +49,7 @@
       </div>
     </header>
     
-   <style>
-p {
-  background-color:sky blue;
-}
-</style>
+ 
     <section class="background firstSection">
       <div class="box-main">
           <div class="firstHalf">
@@ -76,5 +77,6 @@ p {
 </footer>
 
   <script src="delhijs.js"></script>
+    </style>
   </body>
 </html>
